#101 Adding opt-in enpoints for creating users and api keys.
